feat(main): added lab1

--- a/labs/lab1/report/computer-practice--lab1--report.qmd
+++ b/labs/lab1/report/computer-practice--lab1--report.qmd
@@ -1,65 +1,163 @@
 ---
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  name: Мишина Анастасия Алексеевна
+  orcid: 0009-0002-6246-7100
+  email: 1132226532@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
       postal-code: 117198
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
-
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Отчет по лабораторной работе №1"
+subtitle: "Компьютерный практикум по статистическому анализу данных"
 license: "CC BY"
+## Generic options
+lang: ru-RU
+number-sections: true
+toc: true
+toc-title: "Содержание"
+toc-depth: 2
+## Crossref customization
+crossref:
+  lof-title: "Список иллюстраций"
+  lot-title: "Список таблиц"
+  lol-title: "Листинги"
+## Bibliography
+bibliography:
+  - bib/cite.bib
+csl: _resources/csl/gost-r-7-0-5-2008-numeric.csl
+## Formats
+format:
+### Pdf output format
+  pdf:
+    toc: true
+    number-sections: true
+    colorlinks: false
+    toc-depth: 2
+    lof: true # List of figures
+    lot: true # List of tables
+#### Document
+    documentclass: scrreprt
+    papersize: a4
+    fontsize: 12pt
+    linestretch: 1.5
+#### Language
+    babel-lang: russian
+    babel-otherlangs: english
+#### Biblatex
+    cite-method: biblatex
+    biblio-style: gost-numeric
+    biblatexoptions:
+      - backend=biber
+      - langhook=extras
+      - autolang=other*
+#### Misc options
+    csquotes: true
+    indent: true
+    header-includes: |
+      \usepackage{indentfirst}
+      \usepackage{float}
+      \floatplacement{figure}{H}
+      \usepackage[math,RM={Scale=0.94},SS={Scale=0.94},SScon={Scale=0.94},TT={Scale=MatchLowercase,FakeStretch=0.9},DefaultFeatures={Ligatures=Common}]{plex-otf}
+### Docx output format
+  docx:
+    toc: true
+    number-sections: true
+    toc-depth: 2
 ---
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Основная цель работы — подготовить рабочее пространство и инструментарий для работы с языком программирования Julia, на простейших примерах познакомиться с основами синтаксиса Julia.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
+1. Установите под свою операционную систему Julia, Jupyter.
+2. Используя Jupyter Lab, повторите примеры из раздела лабораторной работы.
+3. Выполните задания для самостоятельной работы.
 
 # Теоретическое введение
 
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
+Julia -- высокоуровневый свободный язык программирования с динамической типизацией, созданный для математических вычислений [@julialang]. Эффективен также и для написания программ общего назначения. Синтаксис языка схож с синтаксисом других математических языков, однако имеет некоторые существенные отличия.
 
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+Для выполнения заданий была использована официальная документация Julia [@juliadoc].
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+У меня уже были установлены Julia и Jupyter ([рис. @fig-001]).
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+![Запуск Julia. Добавление пакета IJulia](image/1.png){#fig-001 width=70%}
+
+Теперь повторим простейшие примеры для знакомства с синтаксисом Julia ([рис. @fig-002]), ([рис. @fig-003]), ([рис. @fig-004]).
+
+![Выполнение примеров из лабораторной](image/2.png){#fig-002 width=70%}
+
+![Выполнение примеров из лабораторной](image/3.png){#fig-003 width=70%}
+
+![Выполнение примеров из лабораторной](image/4.png){#fig-004 width=70%}
+
+Теперь перейдем к выполнению заданий.
+
+**Задание №1**
+
+Изучим документацию по основным функциям Julia для чтения / записи / вывода информации на экран: read(), readline(), readlines(), readdlm(), print(), println(), show(), write(). Приведем свои примеры их использования, поясняя особенности их применения.
+
+Для того, чтобы ознакомиться с документацией достаточно поставить знак `?` перед интересующей функцией. Например, `?print`.
+
+Создадим файл hello.txt со следующим содержимым:
+
+```
+Hello
+Nastya
+it
+is
+world!
+```
+
+Создадим текстовый файл с любым содержанием в папке, где мы работаем. Откроем его на чтение и прочитаем с помощью команды `read()`. Текст вывелся в одну строку с разделителями `\r\n`. Также прочитаем текст используя функцию `readline()` - выведется только первая строка. Чтобы прочитать все строки в файле используем команду `readlines()` ([рис. @fig-005]).
+
+![Чтение файла](image/5.png){#fig-005 width=70%}
+
+Далее посмотрим, как работает команда `println()`, `print()` и `show()` ([рис. @fig-006]), ([рис. @fig-007]).
+
+![Вывод на печать](image/6.png){#fig-006 width=70%}
+
+![Вывод на печать](image/7.png){#fig-007 width=70%}
+
+Посмотрим на работу функции `write()` ([рис. @fig-008]).
+
+![Команда записи](image/8.png){#fig-008 width=70%}
+
+**Задание №2**
+
+Изучим документацию по функции parse() ([рис. @fig-009]). Приведем свои примеры её использования, поясняя особенности её применения ([рис. @fig-010]).
+
+![Документация по функции parse()](image/9.png){#fig-009 width=70%}
+
+![Примеры использования функции parse()](image/10.png){#fig-010 width=70%}
+
+**Задание №3**
+
+Изучим синтаксис Julia для базовых математических операций с разным типом переменных: сложение, вычитание, умножение, деление, возведение в степень, извлечение корня, сравнение, логические операции. Приведем примеры с пояснениями по особенностям их применения ([рис. @fig-011]), ([рис. @fig-012]).
+
+![Примеры базовых математических операций](image/11.png){#fig-011 width=70%}
+
+![Примеры базовых математических операций](image/12.png){#fig-012 width=70%}
+
+**Задание №4**
+
+Приведем несколько примеров с пояснениями с операциями над матрицами и векторами: сложение, вычитание, скалярное произведение, транспонирование, умножение на скаляр ([рис. @fig-013]), ([рис. @fig-014]).
+
+![примеры операций над матрицами](image/13.png){#fig-013 width=70%}
+
+![примеры операций над векторами](image/14.png){#fig-014 width=70%}
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+В результате выполнения данной лабораторной работы я подготовила рабочее пространство и инструментарий для работы с языком программирования Julia, на простейших примерах познакомилась с основами синтаксиса Julia.
 
 # Список литературы{.unnumbered}
 
